Fix overlapping problem

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,10 +5,6 @@
   align-items: center;
   background-color: #120235;
   font-family: 'Roboto', sans-serif;
-  
-  @media screen and (min-width: 768px) {
-    height: 88vh;
-  }
 }
 
 .main {
